<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/chatback"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/send"
        android:layout_alignRight="@+id/recvmsg"
        android:layout_marginRight="19dp"
        android:gravity="center"
        android:text="@string/back" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sendmsg"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="14dp"
        android:gravity="center"
        android:text="@string/send" />

    <EditText
        android:id="@+id/sendmsg"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_above="@+id/chatback"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/sendmsg" />

    <TextView
        android:id="@+id/recvmsg"
        android:layout_width="225dp"
        android:layout_height="85dp"
        android:layout_above="@+id/sendmsg"
        android:layout_alignRight="@+id/sendmsg"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/recvmsg"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/clientlist"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_above="@+id/recvmsg"
        android:layout_alignLeft="@+id/send"
        android:layout_marginBottom="30dp"
        android:gravity="center" />

    <Button
        android:id="@+id/refresh"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clientlist"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        android:text="@string/ref" />

    <TextView
        android:id="@+id/loggedin"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_alignBaseline="@+id/refresh"
        android:layout_alignBottom="@+id/refresh"
        android:layout_alignRight="@+id/recvmsg"
        android:text="@string/loggedinas" />

    <TextView
        android:id="@+id/log"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/logscreen"
        android:gravity="center"></TextView>
</RelativeLayout>