<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login"
        android:layout_alignBottom="@+id/login"
        android:layout_alignRight="@+id/username"
        android:layout_marginRight="14dp"
        android:text="@string/reg"
        android:layout_gravity="center"
        android:gravity="center" />

    <TextView
        android:id="@+id/logscreen"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:text="@string/log" />

<!-- 
    <EditText
        android:id="@+id/ipaddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10" 
        android:inputType="text"
        android:layout_gravity="center"
        android:gravity="center" 
        android:hint="@string/ipaddrhint"
         >
    </EditText>

    <EditText
        android:id="@+id/sendmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:ems="10" 
        android:inputType="text"
        android:hint="@string/sendhint"
          />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sendtext" />
    


    <EditText
        android:id="@+id/port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ipaddr"
        android:layout_below="@+id/ipaddr"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/porthint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/recvmsg"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:singleLine="false"
        android:hint="@string/recvtext"
        android:textIsSelectable="true" >
 	</TextView> -->

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/password"
        android:layout_marginTop="129dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        android:layout_gravity="center"
        android:gravity="center" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:gravity="center" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/ipaddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:hint="@string/ipaddrhint"
        android:ems="10"
        android:layout_gravity="center"
        android:gravity="center" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/password"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/login" />
  
</RelativeLayout>